# sparkle

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  package.json  pnpm-lock.yaml
apps/desktop/: .env.example  .gitignore  README.md  UPDATER-SETUP.md  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: copy-mcp-server.mjs
apps/desktop/src/: App.tsx  WindowSessionCapture.test.tsx  WindowSessionCapture.tsx  agentRunner.ts  analytics.test.ts  analytics.ts  clipboard.ts  connectionMonitor.test.ts  connectionMonitor.ts  connectivity.ts  disableNativeTooltips.test.tsx  disableNativeTooltips.ts  index.css  logger.test.ts  logger.ts  main.tsx  mock.ts  perfTrace.classifyJankGap.test.ts  perfTrace.jankMonitor.test.ts  perfTrace.jankRollup.test.ts  perfTrace.render.test.ts  perfTrace.renderGate.test.ts  perfTrace.span.test.ts  perfTrace.ts  preflight.ts  pty.race.test.ts  pty.submit.test.ts  pty.targeted.test.ts  pty.test.ts  pty.ts  screenshot.test.ts  screenshot.ts  setupState.test.ts  setupState.ts  test-setup.ts  types.ts  useAttentionNotifications.bodySource.test.ts  useAttentionNotifications.crossWindowWorkers.test.ts  useAttentionNotifications.detail.test.ts  useAttentionNotifications.haikuSkip.test.tsx  (+13 more)
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/objc/: force_present.m  panel.m
apps/desktop/src-tauri/resources/: sparkle-hook.mjs  worktree-guard.mjs
apps/desktop/src-tauri/resources/roborev/: post-commit  post-rewrite
apps/desktop/src-tauri/src/: accounts.rs  ai.rs  attachments.rs  attention.rs  attention_summary.rs  audio.rs  auth.rs  bridge.rs  bridge_windows.rs  capture_window.rs  chief.rs  claude.rs  claude_chat.rs  cloud.rs  config.rs  connectivity.rs  crash.rs  delivery.rs  dev_identity.rs  dictation.rs  folder_picker.rs  github.rs  history.rs  hooks.rs  judge.rs  lib.rs  logging.rs  mac_panel.rs  main.rs  mic_permission.rs  model.rs  model_catalog.rs  naming.rs  notes.rs  preflight.rs  pty.rs  retention.rs  screenshot.rs  setup.rs  socket.rs  (+9 more)
apps/desktop/src/capture/: CaptureApp.test.tsx  CaptureApp.tsx  LastFocusedProjectTracker.test.tsx  LastFocusedProjectTracker.tsx  captureEvents.ts  captureLayout.test.ts  captureLayout.ts  discard.test.ts  discard.ts  lastFocusedProject.test.ts  lastFocusedProject.ts  types.ts
apps/desktop/src/components/: AccountLoginModal.tsx  AccountsScreen.test.tsx  AccountsScreen.tsx  AdvancedConfigMenu.test.tsx  AdvancedConfigMenu.tsx  AgentCard.tsx  AgentOrderToggle.tsx  AgentPane.memo.test.ts  AgentPane.switchTrace.test.ts  AgentPane.test.ts  AgentPane.tsx  AgentSidebar.agentRow.test.tsx  AgentSidebar.brainstormGate.test.tsx  AgentSidebar.closeAgent.test.tsx  AgentSidebar.crossWindow.test.tsx  AgentSidebar.dnd.test.tsx  AgentSidebar.elapsedTimer.test.ts  AgentSidebar.mergePrompt.test.tsx  AgentSidebar.modelPill.test.tsx  AgentSidebar.newAgentPlacement.test.tsx  AgentSidebar.pin.test.tsx  AgentSidebar.redWorker.test.tsx  AgentSidebar.rowClock.test.tsx  AgentSidebar.subAgent.test.tsx  AgentSidebar.tsx  AgentSidebar.workers.test.tsx  AiEnhancementsBadge.tsx  AiFeaturesMenu.test.tsx  AiFeaturesMenu.tsx  AiLockedNotice.test.tsx  AiLockedNotice.tsx  AlertToggleButton.test.tsx  AlertToggleButton.tsx  ApprovalCard.tsx  ApprovalsMenu.test.tsx  ApprovalsMenu.tsx  AuthGate.optimistic.test.tsx  AuthGate.promo.test.tsx  AuthGate.signin.test.tsx  AuthGate.trial.test.tsx  (+175 more)
apps/desktop/src/engine/: agentCta.e2e.test.ts  agentCta.test.ts  agentCta.ts  agentOrdering.test.ts  agentOrdering.ts  alertDismissal.test.ts  alertDismissal.ts  attention.test.ts  attention.ts  beadLifecycle.test.ts  beadLifecycle.ts  closeAgent.test.ts  closeAgent.ts  composerOcclusion.test.ts  composerOcclusion.ts  engineRegistry.ts  hookEvents.test.ts  hookEvents.ts  hookOutage.integration.test.ts  inMotion.test.ts  inMotion.ts  nudges.test.ts  nudges.ts  redAttentionTaxonomy.test.ts  screenClassifier.test.ts  screenClassifier.ts  screenSnapshot.test.ts  screenSnapshot.ts  sparkle-hook.d.ts  sparkleHook.test.ts  statusEngine.test.ts  statusEngine.ts  statusRouter.test.ts  statusRouter.ts  streamFailure.test.ts  streamFailure.ts  unmergedAttention.test.ts  unmergedAttention.ts  workMode.test.ts  workMode.ts  (+4 more)
apps/desktop/src/guard/: worktree-guard.d.ts  worktreeGuard.test.ts
apps/desktop/src/hooks/: useDragVisionHint.test.tsx  useDragVisionHint.ts  useGithubImport.ts  useNewBuildAgentDrop.test.tsx  useNewBuildAgentDrop.ts  useSpawnBuildAgent.test.ts  useSpawnBuildAgent.ts
apps/desktop/src/keyboardHints/: hintTargets.test.ts  hintTargets.ts  hintTrigger.test.ts  hintTrigger.ts  keybindings.test.ts  keybindings.ts  useHintMode.ts
apps/desktop/src/services/: accountSelection.test.ts  accountSelection.ts  accountStore.test.ts  accountStore.ts  agentModel.test.ts  agentModel.ts  agentNaming.test.ts  agentNaming.ts  aiGate.test.ts  aiGate.ts  anthropic.test.ts  anthropic.ts  attention.ts  autoApprovePreset.test.ts  autoApprovePreset.ts  beads.test.ts  beads.ts  brainstormBridge.test.ts  brainstormBridge.ts  branchStatus.test.ts  branchStatus.ts  buildAgent.test.ts  buildAgent.ts  capturePlan.test.ts  capturePlan.ts  captureSends.test.ts  captureSends.ts  chief.test.ts  chief.ts  chiefEscape.test.ts  chiefEscape.ts  chiefParticipant.test.ts  chiefParticipant.ts  chiefSync.test.ts  chiefSync.ts  chiefThread.test.ts  chiefThread.ts  claudeChat.test.ts  claudeChat.ts  claudeSpawn.test.ts  (+152 more)
apps/desktop/src/stores/: agentStore.ts  approvalsStore.ts  authStore.test.ts  authStore.ts  beadsStore.test.ts  beadsStore.ts  beadsStore.visibility.test.ts  composerPersist.test.ts  composerPersist.ts  connectionStore.test.ts  connectionStore.ts  dictationStore.test.ts  dictationStore.ts  handoffStore.test.ts  handoffStore.ts  historyStore.test.ts  historyStore.ts  interactionStore.test.ts  interactionStore.ts  keybindingsStore.ts  librarianStore.test.ts  (+35 more)
(+67 files in other folders)
