[package]
name = "sparkle"
version = "0.5.0"
edition = "2021"
description = "Sparkle desktop (macOS)"

[lib]
name = "sparkle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Compiles objc/force_present.m (the foreground-notification category) on macOS.
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
# Store the desktop bearer token in the macOS keychain (Security framework).
keyring = { version = "3", features = ["apple-native"] }
# Lets the webview reach the Chief API (api.storytell.ai) from Rust, bypassing the
# webview's CSP and the API's lack of CORS — see chief.ts / bead .
tauri-plugin-http = "2"
# Auto-updater: poll a signed GitHub Releases manifest, download + install signed update
# artifacts, and relaunch into the new build. Public-key verification is configured in
# tauri.conf.json (plugins.updater.pubkey); see apps/desktop/UPDATER-SETUP.md.
tauri-plugin-updater = "2"
# Relaunch the app after an update is staged (used by the frontend updaterService).
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
# Editable TOML config file (config.rs): `toml` reads layers into typed structs; `toml_edit`
# does comment/format-preserving writes so a hand-edited config survives in-app changes;
# `notify` watches the global config.toml for live reload. See the editable-config design spec.
toml = "0.8"
toml_edit = "0.22"
notify = "6"
# preserve_order: keep the user's settings.local.json keys in their original order when we merge
# hooks into it (default serde_json is BTreeMap-backed and would alphabetize them on every write).
serde_json = { version = "1", features = ["preserve_order"] }
# Local searchable history store (prompts + responses). bundled = vendored SQLite with FTS5
# compiled in (full-text search); frontend supplies id + created_at, so no time/uuid crate.
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
base64 = "0.22"
sherpa-onnx = "1.13.3"
cpal = "0.15"
ureq = "2"
# Blocking WebSocket client for the Deepgram Nova-3 streaming STT path. rustls (not native-tls)
# to reuse the rustls/webpki-roots already in the tree (via reqwest/tauri) — no new system-TLS dep.
tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "handshake"] }
bzip2 = "0.4"
tar = "0.4"
tauri-plugin-global-shortcut = "2"
# Native macOS Notification Center integration. We use mac-notification-sys directly rather
# than tauri-plugin-notification because on desktop the plugin discards click events — and we
# need the click to route to the specific worker that asked. mac-notification-sys returns the
# interaction (Click / ActionButton) so we can emit a focus-agent event. macOS-only app.
# PINNED (=0.6.15): the foreground-banner fix (objc/force_present.m) adds a category to this
# crate's `NotificationCenterDelegate` and depends on it posting via NSUserNotification. A bump
# that renames the class fails loud at link, but one that switches to UNUserNotificationCenter
# would silently turn the category into a dead no-op — so bumps must be a deliberate, reviewed step.
mac-notification-sys = "=0.6.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
hound = "3.5"
tempfile = "3"

# Release tuning for a perf-sensitive native app. LTO + single codegen unit trade build time
# for faster runtime on the git/audio/transcribe hot paths; strip removes symbols to shrink the
# shipped binary. Deliberately NOT panic="abort": the app runs work on spawned threads (pty
# readers, audio, transcribe, bridge) and relies on unwind isolation so one thread's panic
# doesn't abort the whole process.
[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
