[package]
name = "sparkle"
version = "0.33.0"
edition = "2021"
description = "Sparkle desktop (macOS)"

[lib]
name = "sparkle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Compiles objc/force_present.m (the foreground-notification category) on macOS.
cc = "1"

[dependencies]
# macos-private-api: required for the transparent capture-window takeover (capture_window.rs);
# paired with "macOSPrivateApi": true in tauri.conf.json. Other windows stay opaque.
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
# Secret storage for the desktop bearer token (macOS Keychain / Windows Credential Manager).
# Declared per-target below in `[target.'cfg(...)'.dependencies]` because the backend feature
# differs by OS; the `keyring::Entry` API is identical, so auth.rs / trial_remote.rs need no cfg.
# Lets the webview reach the Chief API (api.storytell.ai) from Rust, bypassing the
# webview's CSP and the API's lack of CORS — see chief.ts / bead .
tauri-plugin-http = "2"
# Auto-updater: poll a signed GitHub Releases manifest, download + install signed update
# artifacts, and relaunch into the new build. Public-key verification is configured in
# tauri.conf.json (plugins.updater.pubkey); see apps/desktop/UPDATER-SETUP.md.
tauri-plugin-updater = "2"
# Relaunch the app after an update is staged (used by the frontend updaterService).
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
# Editable TOML config file (config.rs): `toml` reads layers into typed structs; `toml_edit`
# does comment/format-preserving writes so a hand-edited config survives in-app changes;
# `notify` watches the global config.toml for live reload. See the editable-config design spec.
toml = "0.8"
toml_edit = "0.22"
notify = "6"
# preserve_order: keep the user's settings.local.json keys in their original order when we merge
# hooks into it (default serde_json is BTreeMap-backed and would alphabetize them on every write).
serde_json = { version = "1", features = ["preserve_order"] }
# Local searchable history store (prompts + responses). bundled = vendored SQLite with FTS5
# compiled in (full-text search); frontend supplies id + created_at, so no time/uuid crate.
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
base64 = "0.22"
# PKCE + login-CSRF state for the desktop sign-in deep link (auth.rs, sparkle-kqg0): `rand` for the
# high-entropy state/verifier, `sha2` for the S256 code_challenge, `subtle` for the constant-time
# state compare. All already vendored transitively — declared here so auth.rs can use them directly.
rand = "0.8"
sha2 = "0.10"
subtle = "2"
sherpa-onnx = "1.13.3"
cpal = "0.15"
ureq = "2"
# Best-effort secret redaction of the log tail we attach to support tickets (support.rs). Already
# in the tree transitively; declared here so support.rs can use it directly.
regex = "1"
# Blocking WebSocket client for the Deepgram Nova-3 streaming STT path. rustls (not native-tls)
# to reuse the rustls/webpki-roots already in the tree (via reqwest/tauri) — no new system-TLS dep.
tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "handshake"] }
bzip2 = "0.4"
tar = "0.4"
tauri-plugin-global-shortcut = "2"
# Position the menu-bar popover under the tray icon (TrayCenter). tray-icon feature wires the
# tray-event hook used in lib.rs. Cross-platform crate, so it stays in the common deps.
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# ── Platform-specific dependencies ──────────────────────────────────────────────────────────
# macOS: native Keychain backend for `keyring`, plus mac-notification-sys for clickable
# Notification Center banners (see attention.rs).
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
# We use mac-notification-sys directly rather than tauri-plugin-notification because on desktop
# the plugin discards click events — and we need the click to route to the specific worker that
# asked. It returns the interaction (Click / ActionButton) so we can emit a focus-agent event.
# PINNED (=0.6.15): the foreground-banner fix (objc/force_present.m) adds a category to this
# crate's `NotificationCenterDelegate` and depends on it posting via NSUserNotification. A bump
# that renames the class fails loud at link, but one that switches to UNUserNotificationCenter
# would silently turn the category into a dead no-op — so bumps must be a deliberate, reviewed step.
mac-notification-sys = "=0.6.15"

# AVFoundation, for the microphone's TCC authorization status (see mic_permission.rs). Nothing
# else can answer "did the user actually grant the mic?" — cpal/CoreAudio happily hand a DENIED
# user a stream that delivers silence forever, which is the bug this dependency exists to detect.
#
# We take the generated objc2 bindings over hand-rolled `msg_send!` because they make the two
# tricky bits compile-checked rather than trusted: `AVAuthorizationStatus` arrives as a real enum
# (a raw `msg_send!` returns an NSInteger we'd be matching against hand-copied magic numbers, and
# mixing up Restricted=1/Denied=2 silently inverts the remedy we show), and the async
# `requestAccess` completion handler gets a typed `block2` block instead of a hand-built block
# literal. `objc2` 0.6 is already in our tree via wry, so this adds no new toolchain surface.
#
# default-features = false is load-bearing: the crate defaults to ~168 features (all of
# AVFoundation). We compile the two we touch — AVCaptureDevice for the status/request calls, and
# AVMediaFormat for the AVMediaTypeAudio constant that selects the microphone rather than the
# camera. `block2` is the completion-handler ABI; `objc2` is only for `runtime::Bool` in its
# signature.
#
# Caret, NOT `=`-pinned like mac-notification-sys above — the two cases are not alike. That pin
# exists because we compile an Objective-C category against that crate's own class, a real
# cross-crate ABI coupling. There is no equivalent here: the `Bool`/`RcBlock` values we build are
# only ever handed to objc2-av-foundation, which depends on `objc2`/`block2` itself and so shares
# whichever version cargo resolves, by construction. We never pass an objc2 type to wry, so there
# is no boundary between our tree and wry's to keep in sync. Cargo unifies semver-compatible
# ranges, so wry's requirement and ours collapse to one objc2 (0.6.4) and one block2 (0.6.2) —
# verified in Cargo.lock, which this change grew by exactly one package. `=`-pinning would be
# actively worse: it breaks resolution the day objc2-av-foundation needs a 0.6.x we forbade
# (roborev 37736).
objc2 = "0.6"
block2 = "0.6"
objc2-av-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "block2",
    "AVCaptureDevice",
    "AVMediaFormat",
] }

# Windows: native Credential Manager backend for `keyring`. Notifications are handled without an
# extra crate in attention.rs (see the #[cfg(not(target_os = "macos"))] path).
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# Unix: raw kill(2) for signalling a whole process GROUP (negative pid) — used by
# sparkle_improve.rs to take out a headless pass AND everything it spawned (git/gh/tests);
# std's Child::kill only reaches the direct child.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
hound = "3.5"
tempfile = "3"

# Release tuning for a perf-sensitive native app. LTO + single codegen unit trade build time
# for faster runtime on the git/audio/transcribe hot paths; strip removes symbols to shrink the
# shipped binary. Deliberately NOT panic="abort": the app runs work on spawned threads (pty
# readers, audio, transcribe, bridge) and relies on unwind isolation so one thread's panic
# doesn't abort the whole process.
[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
